# mycolorpalette

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.in  setup.py  tox.ini
mypalette/: __init__.py  examples.md  load_palette.py  logs.py  visualize_palette.md  visualize_palette.py
mypalette/commons/: logs.py
mypalette/src/: load_palette.py  visualize_palette.py
tests/: test_load_palette.py  test_visualize_palette.py  visualize_palette.py
tests/data/: test_palette.json  test_palette.txt
