[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mypalette"
author = "Mattia Cinelli"
home-page = "https://github.com/MattiaCinelli/mypalette"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

