[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "flit_core >=2,<4"
]
build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "mypalette"
author = "Mattia Cinelli"
home-page = "https://github.com/MattiaCinelli/mypalette"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

